<resources>
    <string name="app_name">Academy Students</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Bienvenido</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configuracion</string>

    <string name="menu_perfil">Perfil</string>
    <string name="menu_pensum">Pensum</string>
    <string name="menu_calendario">Calendario</string>
    <string name="menu_subjects">Materias</string>
    <string name="menu_news">Notificaciones</string>
    <string name="menu_version">Acerca de</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Correo</string>
    <string name="prompt_password">Clave</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="welcome">"Bienvenido!"</string>
    <string name="invalid_username">No es un usuario valido</string>
    <string name="invalid_password">Clave debe ser  >5 caracteres</string>
    <string name="login_failed">Connecting...</string>
    <string name="acerca">Esta app movil es un proyecto final de la Materia Prog. Movil I de UNICDA, el cual es una propuesta de app movil para los estudiantes de la universidad. </string>

    <string name="material_calendar_monday">L</string>
    <string name="material_calendar_tuesday">M</string>
    <string name="material_calendar_wednesday">Mi</string>
    <string name="material_calendar_thursday">J</string>
    <string name="material_calendar_friday">V</string>
    <string name="material_calendar_saturday">S</string>
    <string name="material_calendar_sunday">D</string>

    <array name="material_calendar_months_array">
        <item>Enero</item>
        <item>Febrero</item>
        <item>Marzo</item>
        <item>Abril</item>
        <item>Mayo</item>
        <item>Junio</item>
        <item>Julio</item>
        <item>Agosto</item>
        <item>Septiembre</item>
        <item>Octubre</item>
        <item>Noviembre</item>
        <item>Deciembre</item>
    </array>

    <string name="material_calendar_today_button">Hoy</string>
    <string name="material_calendar_positive_button">OK</string>
    <string name="material_calendar_negative_button">Cancelar</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="subejct_image">subejct image</string>
    <string name="academy_login">Academy Students</string>
    <string name="title_activity_login">Academy Students</string>
    <string name="cerrar">Cerrar Sesion</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="help_text">¿Necesitas Ayuda? \n Contactanos..</string>
    <string name="email_help">carlos.sosa@unicda.edu.do</string>
    <string name="about_text">Acerca de nosotros..</string>
    <string name="dev">Desarrollador</string>
    <string name="dev_team">Carlos Sosa</string>
    <string name="v_label">Version</string>
    <string name="v_value">1.0</string>
    <string name="date_rel">Fecha release</string>
    <string name="date_rel_value">31-07-2024</string>
    <string name="tel_label">Telefono</string>
    <string name="tel_value">1 (809) 000-0000</string>
    <string name="legal">Licencia</string>
    <string name="legal_value">MIT</string>
    <string name="web_lbl">Web</string>
    <string name="uni_label">https://unicda.edu.do/</string>
    <string name="primer_cuatrimestre">Primer Cuatrimestre</string>
    <string name="segundo_cuatrimestre">Segundo Cuatrimestre</string>
    <string name="tercer_cuatrimestre">Tercer Cuatrimestre</string>
    <string name="cuarto_cuatrimestre">Cuarto Cuatrimestre</string>
    <string name="quinto_cuatrimestre">Quinto Cuatrimestre</string>
    <string name="sexto_cuatrimestre">Sexto Cuatrimestre</string>
    <string name="septimo_cuatrimestre">Septimo Cuatrimestre</string>
    <string name="octavo_cuatrimestre">Octavo Cuatrimestre</string>
    <string name="noveno_cuatrimestre">Noveno Cuatrimestre</string>
    <string name="decimo_cuatrimestre">Decimo Cuatrimestre</string>
    <string name="undecimo_cuatrimestre">Undecimo Cuatrimestre</string>
    <string name="duodecimo_cuatrimestre">Duodecimo Cuatrimestre</string>
    <string name="sp_text">Materias Pendientes</string>
    <string name="asig_ins_text">Asignaturas Inscritas</string>
    <string name="mp_text">Materias Pendientes</string>
    <string name="waiting">Esperando...</string>
    <string name="userNotExists">Usuario no existe</string>
</resources>