<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_perfil">

    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.student.unicdastudentsapp.presentation.perfil.PerfilFragment"
        android:label="@string/menu_perfil"
        tools:layout="@layout/fragment_perfil" />

    <fragment
        android:id="@+id/nav_pensum"
        android:name="com.student.unicdastudentsapp.presentation.pensum.PensumFragment"
        android:label="@string/menu_pensum"
        tools:layout="@layout/fragment_pensum" />

    <fragment
        android:id="@+id/nav_calendar"
        android:name="com.student.unicdastudentsapp.presentation.calendario.CalendarioFragment"
        android:label="@string/menu_calendario"
        tools:layout="@layout/fragment_calendario" />
    <fragment
        android:id="@+id/nav_subjects"
        android:name="com.student.unicdastudentsapp.presentation.materias.MateriasFragment"
        android:label="@string/menu_subjects"
        tools:layout="@layout/fragment_materias" />
    <fragment
        android:id="@+id/nav_news"
        android:name="com.student.unicdastudentsapp.presentation.notificaciones.NotificacionesFragment"
        android:label="@string/menu_news"
        tools:layout="@layout/fragment_notificaciones" />
    <fragment
        android:id="@+id/nav_version"
        android:name="com.student.unicdastudentsapp.presentation.acercade.AcercaFragment"
        android:label="@string/menu_version"
        tools:layout="@layout/fragment_acerca" />
    <activity
        android:id="@+id/nav_close"
        android:name="com.student.unicdastudentsapp.presentation.logout.LogOut"
        android:label="Cerrar Session" />
    <activity
        android:id="@+id/nav_pending"
        android:name="com.student.unicdastudentsapp.presentation.pendientes.PendingSubjectsActivity"
        android:label="Materias Pendientes" />
</navigation>